[package]
name = "spotify-rolling-100"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
arc = "0.0.1"
awc = "3.5.1"
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
http = "1.2.0"
log = "0.4.22"
once_cell = "1.20.2"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
url = "2.5.4"
